--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,5 +39,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
+    <!-- 仮の新規登録ボタン -->
+    <div style="text-align: center; margin-top: 20px;">
+      <button onclick="window.location.href='/register'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">
+        新規登録
+      </button>
+    </div>
   </body>
 </html>
